other entity improvements